Implemented temporary cache and all